--- a/lessonbuilder/tool/src/resources/messages.properties
+++ b/lessonbuilder/tool/src/resources/messages.properties
@@ -509,7 +509,7 @@ simplepage.website.tooltip=There is specific support for Camtasia, Wimba Create 
 simplepage.addwebsite-descrip=There is specific support for Camtasia, Wimba Create and Articulate, but any ZIP file may be uploaded. See the help in the dialog for more information.
 
 
-simplepage.website.noindex=We have uploaded your ZIP file. The files in it are now in folder {} in Resources. But are unable to find the file in it that should be displayed. You may use "Add Resource" with "Choose Existing File"  to choose the correct file yourself.
+simplepage.website.noindex=We have uploaded your ZIP file. The files in it are now in folder {} in Resources. But are unable to find the file in it that should be displayed. You may go to "Add Content" then "Add Content Link" and select "Select an Existing Resource"  to choose the correct file yourself.
 simplepage.website.cantexpand=Unable to extract the files from your ZIP file
 
 simplepage.blti=Add External Tool
